Bug 906166.  Make sure to initialize the "succeeded" outparam of XPC_WN_Helper_DelProperty.  r=bholley